--- a/client/app/place/place-add.html
+++ b/client/app/place/place-add.html
@@ -1,11 +1,5 @@
 <div class="container">
     <h2>Pendaftaran Listing</h2>
-    <div>
-        {{listing}}
-    </div>
-    <div>
-        
-    </div>
     <form name="addPlaceForm" class="form-horizontal">
         <wizard on-finish="finishedWizard()">
             <wz-step wz-title="Tentukan Lokasi">
@@ -68,7 +62,7 @@
                                         <h3><strong><a href="#" class="text-left">{{ category.label }}</a></strong></h3>
                                         <div class="row child-category">
                                             <div ng-repeat="child in category.children">
-                                                <button type="button" class="btn btn-default btn-xs btn-sub-category" ng-model="singleModel[child._id]" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-click="subCategoryCallback(child._id)">
+                                                <button type="button" class="btn btn-default btn-xs btn-sub-category" ng-model="subCategory[child._id]" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-click="subCategoryCallback(child._id)">
                                                     {{ child.label }}
                                                 </button>&nbsp;
                                             </div>
@@ -310,13 +304,7 @@
                                     <tr ng-repeat="item in uploader.queue">
                                         <td>
                                             <strong>{{ item.file.name }}</strong>
-                                            <!-- Image preview -->
-                                            <!--auto height-->
-                                            <!--<div ng-thumb="{ file: item.file, width: 100 }"></div>-->
-                                            <!--auto width-->
                                             <div ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, height: 100 }"></div>
-                                            <!--fixed width and height -->
-                                            <!--<div ng-thumb="{ file: item.file, width: 100, height: 100 }"></div>-->
                                         </td>
                                         <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
                                         <td ng-show="uploader.isHTML5">
