--- a/client/app/place/place-add.html
+++ b/client/app/place/place-add.html
@@ -149,19 +149,19 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Propinsi</label>
                         <div class="col-sm-4">
-                            <select id="state" class="form-control" ng-model="listing.address.state" ng-options="item._id as item.name for item in states" ng-change="getCities(listing.address.state)" ng-focus="states">
+                            <select id="state" class="form-control" ng-model="listing.address.state" ng-options="item as item.name for item in states" ng-change="getCities(listing.address.state)" ng-focus="states">
                                 <option value=''>Select</option>
                             </select>
                         </div>
                         <div class="col-sm-4">
-                            <select id="city" class="form-control" ng-disabled="!listing.address.state" ng-model="listing.address.city" ng-options="item._id as item.name for item in cities" ng-focus="!listing.address.state">
+                            <select id="city" class="form-control" ng-disabled="!listing.address.state" ng-model="listing.address.city" ng-options="item as item.name for item in cities" ng-focus="!listing.address.state">
                                 <option value=''>Select</option>
                             </select>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10 ">
-                            <span ng-if="listing.address.city" class="help-block m-b-none"><b class="text-info">{{listing.address.city.name}}</b> berada pada zona Waktu Indonesia Bagian Barat (WIB).</span>
+                            <span ng-if="listing.address.city.name" class="help-block m-b-none"><b class="text-info">{{listing.address.city.name}}</b> berada pada zona Waktu Indonesia Bagian Barat (WIB).</span>
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
