Paging, category search, listing list

--- a/client/app/main/panel-locations.html
+++ b/client/app/main/panel-locations.html
@@ -4,7 +4,7 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-content text-center p-md">
                     <h2>
-                        <span class="text-navy">NEARBY LOCATION</span>
+                        <span class="text-navy">KOTA TERDEKAT</span>
                     </h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
