--- a/client/app/place/place-category.html
+++ b/client/app/place/place-category.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="col-md-12" ng-repeat="place in vm.places.docs">
+    <div class="col-md-12" ng-repeat="place in vm.places">
         <div class="hr-line-dashed"></div>
         <div class="col-md-3">
             <img src="/uploads/{{place.images[0]}}">
