--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -40,7 +40,7 @@
                 <button type="button" class="btn btn-primary btn-lg btn-block"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search </button>
             </div>
             <div class="col-md-2">
-                <button type="button" class="btn btn-lg btn-block btn-danger"><i class="fa fa-plus-circle"></i> Add Listing </button>
+                <a href="/places_add" class="btn btn-lg btn-block btn-danger"><i class="fa fa-plus-circle"></i> Add Listing </a>
             </div>
         </form>
     </div>
@@ -56,5 +56,5 @@
     <div data-ng-include="'/app/main/panel-locations.html'"></div>
     <!-- <div data-ng-include="'/app/main/panel-add-listing.html'"></div> -->
     <div data-ng-include="'/app/main/panel-featured-place.html'"></div>
-    <div data-ng-include="'/app/main/panel-new-place.html'"></div>
+    <!-- <div data-ng-include="'/app/main/panel-new-place.html'"></div> -->
 </div>
