--- a/client/app/main/panel-categories.html
+++ b/client/app/main/panel-categories.html
@@ -1,10 +1,10 @@
 <div class="wrapper wrapper-content animated fadeInRight">
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-content text-center p-md">
                     <h2>
-                        <span class="text-navy">MAIN CATEGORIES</span>
+                        <span class="text-navy">MAIN KATEGORI</span>
                     </h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.
@@ -12,7 +12,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="row">
         <div ng-repeat="category in vm.categories" class="col-lg-4">
             <div class="contact-box">
@@ -22,7 +22,7 @@
                 <div class="col-md-10">
                     <h3><strong><a href="#">{{ category.label }}</a></strong></h3>
                     <div ng-repeat="child in category.children">
-                        <div><a href="#">{{ child.label }}</a></div>
+                        <div><a href="/places/category/{{child._id}}">{{ child.label }}</a></div>
                     </div>
                 </div>
                 <div class="clearfix"></div>
