--- a/client/app/main/panel-featured-place.html
+++ b/client/app/main/panel-featured-place.html
@@ -1,5 +1,5 @@
 <div class="wrapper wrapper-content">
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-content text-center p-md">
@@ -9,12 +9,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="row">
         <div class="col-lg-12">
             <slick class="slick_demo_2" infinite="true" slides-to-show="3" slides-to-scroll="1" center-mode="false" autoplay="true" autoplaySpeed="5000" speed="5000" dots="false"
                    responsive="[{ breakpoint: 1024, settings: { slidesToShow: 3, slidesToScroll: 3, infinite: true, dots: true } }, { breakpoint: 600, settings: { slidesToShow: 2, slidesToScroll: 2 } }, { breakpoint: 480, settings: { slidesToShow: 1, slidesToScroll: 1 } } ]" ng-if="vm.ready">
-                <div ng-repeat="place in vm.places | filter:{featured:true}" >
+                <div ng-repeat="place in vm.places.docs | filter:{featured:true}" >
                     <div class="ibox-content">
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
