--- a/client/app/main/panel-new-place.html
+++ b/client/app/main/panel-new-place.html
@@ -14,7 +14,7 @@
         <div class="col-lg-12">
             <slick class="slick_demo_2" infinite="true" slides-to-show="5" slides-to-scroll="5" autoplay="true" autoplaySpeed="5000" speed="5000"
                    responsive="[{ breakpoint: 1024, settings: { slidesToShow: 3, slidesToScroll: 3, infinite: true, dots: true } }, { breakpoint: 600, settings: { slidesToShow: 2, slidesToScroll: 2 } }, { breakpoint: 480, settings: { slidesToShow: 1, slidesToScroll: 1 } } ]" ng-if="vm.ready">
-                <div ng-repeat="place in vm.places | filter:{order_by:published} | limitTo:10" >
+                <div ng-repeat="place in vm.places.docs | filter:{order_by:published} | limitTo:10" >
                     <div class="ibox-content">
                         <!-- <div class="small">{{place.published | date:'dd MMM yyyy'}}</div> -->
                         <p>
