--- a/client/index.html
+++ b/client/index.html
@@ -135,36 +135,38 @@
     <script src="/bower_components/ng-device-detector/ng-device-detector.js"></script>
     <script src="/bower_components/angular-clockpicker/dist/angular-clockpicker.min.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+    <script src="/bower_components/angular-paging/dist/paging.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
     <!-- build:js /js/app.js -->
     <!-- inject:js -->
     <script src="/client/app/app.module.js"></script>
-    <script src="/client/app/core/core.module.js"></script>
     <script src="/client/app/data/data.module.js"></script>
-    <script src="/client/app/main/main.module.js"></script>
+    <script src="/client/app/core/core.module.js"></script>
     <script src="/client/app/map/map.module.js"></script>
+    <script src="/client/app/main/main.module.js"></script>
     <script src="/client/app/place/place.module.js"></script>
     <script src="/client/app/user/user.module.js"></script>
     <script src="/client/app/admin/user/admin.user.module.js"></script>
     <script src="/client/app/blocks/exception/exception.module.js"></script>
     <script src="/client/app/blocks/logger/logger.module.js"></script>
     <script src="/client/app/blocks/router/router.module.js"></script>
+    <script src="/client/app/data/datacontext.js"></script>
     <script src="/client/app/core/bootstrap.dialog.js"></script>
     <script src="/client/app/core/common.js"></script>
     <script src="/client/app/core/config.breeze.js"></script>
     <script src="/client/app/core/core.config.js"></script>
     <script src="/client/app/core/core.constants.js"></script>
     <script src="/client/app/core/inspinia.js"></script>
-    <script src="/client/app/data/datacontext.js"></script>
-    <script src="/client/app/main/main.controller.js"></script>
-    <script src="/client/app/main/main.route.js"></script>
     <script src="/client/app/map/map-marker.controller.js"></script>
     <script src="/client/app/map/map.factory.js"></script>
     <script src="/client/app/map/map.js"></script>
+    <script src="/client/app/main/main.controller.js"></script>
+    <script src="/client/app/main/main.route.js"></script>
     <script src="/client/app/place/category.filter.js"></script>
     <script src="/client/app/place/place.add.controller.js"></script>
+    <script src="/client/app/place/place.category.controller.js"></script>
     <script src="/client/app/place/place.detail.controller.js"></script>
     <script src="/client/app/place/place.factory.js"></script>
     <script src="/client/app/place/place.list.controller.js"></script>
