--- a/client/app/place/place-category.html
+++ b/client/app/place/place-category.html
@@ -21,7 +21,7 @@
                 <b>Website:</b> <a href="{{vm.place.website}}">{{place.website}}</a>
             </address>
             <div class="m-t text-righ">
-                <a href="places/{{ place._id }}" class="btn btn-xs btn-outline btn-primary"> Lihat detail <i class="fa fa-long-arrow-right"></i> </a>
+                <a href="/places/{{ place._id }}" class="btn btn-xs btn-outline btn-primary"> Lihat detail <i class="fa fa-long-arrow-right"></i> </a>
             </div>
         </div>
     </div>
