--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
 <body ng-app="app" ng-strict-di>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div class="navbar-header"><a href="/" class="navbar-brand">Blacksquid</a></div>
+            <div class="navbar-header"><a href="/" class="navbar-brand">disini.id</a></div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
@@ -142,28 +142,34 @@
     <!-- build:js /js/app.js -->
     <!-- inject:js -->
     <script src="/client/app/app.module.js"></script>
-    <script src="/client/app/core/core.module.js"></script>
     <script src="/client/app/data/data.module.js"></script>
-    <script src="/client/app/main/main.module.js"></script>
+    <script src="/client/app/core/core.module.js"></script>
     <script src="/client/app/map/map.module.js"></script>
-    <script src="/client/app/place/place.module.js"></script>
+    <script src="/client/app/main/main.module.js"></script>
     <script src="/client/app/user/user.module.js"></script>
-    <script src="/client/app/blocks/exception/exception.module.js"></script>
+    <script src="/client/app/place/place.module.js"></script>
     <script src="/client/app/admin/user/admin.user.module.js"></script>
+    <script src="/client/app/blocks/exception/exception.module.js"></script>
     <script src="/client/app/blocks/logger/logger.module.js"></script>
     <script src="/client/app/blocks/router/router.module.js"></script>
+    <script src="/client/app/data/datacontext.js"></script>
     <script src="/client/app/core/bootstrap.dialog.js"></script>
     <script src="/client/app/core/common.js"></script>
     <script src="/client/app/core/config.breeze.js"></script>
     <script src="/client/app/core/core.config.js"></script>
     <script src="/client/app/core/core.constants.js"></script>
     <script src="/client/app/core/inspinia.js"></script>
-    <script src="/client/app/data/datacontext.js"></script>
-    <script src="/client/app/main/main.controller.js"></script>
-    <script src="/client/app/main/main.route.js"></script>
     <script src="/client/app/map/map-marker.controller.js"></script>
     <script src="/client/app/map/map.factory.js"></script>
     <script src="/client/app/map/map.js"></script>
+    <script src="/client/app/main/main.controller.js"></script>
+    <script src="/client/app/main/main.route.js"></script>
+    <script src="/client/app/user/identity.factory.js"></script>
+    <script src="/client/app/user/login.controller.js"></script>
+    <script src="/client/app/user/profile.controller.js"></script>
+    <script src="/client/app/user/signup.controller.js"></script>
+    <script src="/client/app/user/user.factory.js"></script>
+    <script src="/client/app/user/user.route.js"></script>
     <script src="/client/app/place/category.filter.js"></script>
     <script src="/client/app/place/place.add.controller.js"></script>
     <script src="/client/app/place/place.category.controller.js"></script>
@@ -172,16 +178,10 @@
     <script src="/client/app/place/place.list.controller.js"></script>
     <script src="/client/app/place/place.route.js"></script>
     <script src="/client/app/place/thumb.directive.js"></script>
-    <script src="/client/app/user/identity.factory.js"></script>
-    <script src="/client/app/user/login.controller.js"></script>
-    <script src="/client/app/user/profile.controller.js"></script>
-    <script src="/client/app/user/signup.controller.js"></script>
-    <script src="/client/app/user/user.factory.js"></script>
-    <script src="/client/app/user/user.route.js"></script>
-    <script src="/client/app/blocks/exception/exception.factory.js"></script>
-    <script src="/client/app/blocks/exception/exception.handler.provider.js"></script>
     <script src="/client/app/admin/user/admin.user.controller.js"></script>
     <script src="/client/app/admin/user/admin.user.route.js"></script>
+    <script src="/client/app/blocks/exception/exception.factory.js"></script>
+    <script src="/client/app/blocks/exception/exception.handler.provider.js"></script>
     <script src="/client/app/blocks/logger/logger.factory.js"></script>
     <script src="/client/app/blocks/router/router.factory.js"></script>
     <script src="/client/app/data/resources/resource.category.cache.js"></script>
